fix: header align

--- a/public/css/dashAnalista.css
+++ b/public/css/dashAnalista.css
@@ -396,7 +396,7 @@
 }
 
 .dialog-content {
-    max-height: 90vh;
+    max-height: 95vh;
     overflow-y: auto;
     padding: 20px 30px;
 }
