--- a/public/css/headerDash.css
+++ b/public/css/headerDash.css
@@ -20,7 +20,7 @@
     background-color: #0d2137 !important;
     border-bottom: 1px solid #00d4f9 !important;
     padding: 10px 0px;
-    position: relative;
+    position: absolute;
 }
 
 .navBarToggler {
@@ -49,6 +49,7 @@
 .offcanvasBody {
     display: flex;
     align-items: center;
+    width: 100vh;
 }
 
 .navBarNav {
@@ -63,6 +64,7 @@
     flex-direction: row !important;
     align-items: center;
     padding: 10px;
+    width: 100%;
 }
 
 .navLi:hover {
